# Atividade-GRPC-C-

./: CMakeLists.txt  README.md  cliente.cpp  cliente.py  notas.proto  notas_pb2.py  notas_pb2_grpc.py  servidor.cpp  servidor.py
